# baxter_simulator

./: README.rst  baxter_simulator.rosinstall
baxter_gazebo/launch/: baxter_world.launch
baxter_sim_examples/scripts/: ik_pick_and_place_demo.py
baxter_sim_hardware/include/baxter_sim_hardware/: baxter_emulator.h
baxter_sim_hardware/launch/: baxter_sdk_control.launch  baxter_sdk_position_rqt.perspective  baxter_sdk_velocity_rqt.perspective
baxter_sim_hardware/src/: baxter_emulator.cpp
baxter_sim_io/: CMakeLists.txt
baxter_sim_io/include/baxter_sim_io/: baxter_io.hpp
baxter_sim_kinematics/launch/: baxter_sim_kinematics.launch
baxter_sim_kinematics/src/: arm_kinematics.cpp
